# serealizer

./: .gitignore  README.md  __init__.py  app.py  exemplo.py  pyproject.toml  serializer.py
serealizer/: __init__.py  pagination.py  viewsets.py
tests/: __init__.py  test_serializer.py  test_viewsets.py
